Style: rename style folder to style, fixed gradient breaking and made consistent spacing in all pages (#16)

--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -1,5 +1,8 @@
-/* Importando estilização geral */
 @import url('./global.css');
+
+body {
+    height: 100vh;
+}
 
 /* Área de texto para denúncias */
 textarea {
