--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,4 @@
 /* --- cores --- */
-
 :root {
   --clr-gradient: linear-gradient(135deg, #d8d2e8, #a799c7);
   --clr-primary-lavanda-50: #ede9f9;
@@ -26,7 +25,7 @@ html {
   --font-a: 1.6rem;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   :root {
     --font-h1: 3.6rem;
     --font-h2: 3.6rem;
@@ -75,7 +74,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   
   background: var(--clr-gradient);
 }
@@ -87,8 +86,9 @@ section.hero {
 .content-box {
   text-align: left;
   padding: 30px 40px;
-  box-shadow: 10px 10px 20px rgba(18, 18, 18, 0.1);
+  margin: 40px 0;
   border-radius: 20px;
+  box-shadow: 10px 10px 20px rgba(18, 18, 18, 0.1);
   background-color: var(--clr-primary-lavanda-50);
 }
 
@@ -114,6 +114,7 @@ section.hero {
 }
 
 .content-box li {
+  margin-top: 15px;
   margin-bottom: 10px;
 }
 
@@ -154,7 +155,6 @@ nav {
   flex-wrap: wrap;
   gap: 10px;
   margin-top: 20px;
-  margin-bottom: 60px;
   scale: 0.96;
 }
 
@@ -182,7 +182,6 @@ footer {
   justify-content: center;
   align-items: center;
   width: 95%;
-  margin-top: 20px;
   padding: 20px 0;
   border-radius: 30px 30px 0 0;
   background-color: var(--clr-primary-lavanda-100);
@@ -222,10 +221,27 @@ footer p {
 
 
 /* Responsividade */
-@media (max-width: 767px) {
+@media (max-width: 769px) {
   .hero-mobile {
     display: none;
   }
+
+  .content-box h1,
+  .content-box h2 {
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  /* esse estilo não estava sendo aplicado */
+  .content-box > :last-child {
+    font-size: 20px;
+  }
+
+  .hero-mobile {
+    margin-top: 20px;
+  }
+
 
   footer {
     padding-top: 15px;
